User Module till 6 June 2018

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,6 @@
     <string name="back_to_login"><u>Back to Login</u></string>
     <string name="remember_me">remember me</string>
     <string name="login">Login</string>
-    <string name="user_name">User Name</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="profile">Profile</string>
@@ -58,10 +57,7 @@
     <string name="messages">Messages</string>
     <string name="search_hint">Search Ads, User or Category</string>
     <string name="password_sent">Your password will be sent to your \nemail address</string>
-    <string name="change_password">CHANGE PASSWORD</string>
     <string name="reason_for_rejection">REASON</string>
-    <string name="old_password">Old Password</string>
-    <string name="new_password">New Password</string>
     <string name="via_email">Via Email</string>
     <string name="via_sms">Via SMS</string>
     <string name="tell_a_friend">TELL A FRIEND</string>
@@ -170,4 +166,46 @@
     <string name="payment_option_value">Payment will made in cash upon service delivery</string>
     <string name="term_option_value">I accept all Terms and Privacy Policy</string>
     <string name="book_service">Book Service</string>
+    <string name="date_before_error">Selected Date is Before Current Date</string>
+    <string name="less_time_error">Please Select Arrive time after Current Time</string>
+    <string name="select_date_error">Select Date First</string>
+    <string name="pending">Pending</string>
+    <string name="complete">Completed Jobs</string>
+    <string name="subscription_package">Subscription Package:</string>
+    <string name="next_visit">Next Visit Due:</string>
+    <string name="view_report">View Report</string>
+    <string name="rate">Rate</string>
+    <string name="rate_technicain">Rate Technician</string>
+    <string name="write_feedback_here">Write your feedback</string>
+    <string name="confirm">Confirm</string>
+    <string name="rating">Rating:</string>
+    <string name="technician_number">Technician Number: </string>
+    <string name="technician_name">Technician Name</string>
+    <string name="tesk_summary">Task Summery:</string>
+    <string name="time_duration">Time Duration:</string>
+    <string name="visit_made">Visit Made:</string>
+    <string name="date">Date:</string>
+    <string name="service_id">Service ID:</string>
+    <string name="update">Update</string>
+    <string name="user_name">User Name</string>
+    <string name="contact_number">Contact number</string>
+    <string name="query_hint">Write your query here..</string>
+    <string name="enter_query">Write atleast one query</string>
+    <string name="turn_notification">Turn Notification</string>
+    <string name="change_password">Change Password</string>
+    <string name="rate_app">Rate the App</string>
+    <string name="change_phone">Change Phone Number</string>
+    <string name="change_language">Change Language</string>
+    <string name="about_app">About App</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="call_us">Call Us</string>
+    <string name="old_password">Old Password</string>
+    <string name="new_password">New Password</string>
+    <string name="re_enter_password">Re-Enter Password</string>
+    <string name="confirm_password_error">Confirm Password did not match</string>
+    <string name="old_number">Old Number</string>
+    <string name="new_number">New Number</string>
+    <string name="view_details">View Details</string>
+    <string name="call_technician">Call Technician</string>
+
 </resources>
