--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,7 +52,7 @@
     <string name="login">Login</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
-    <string name="profile">Profile</string>
+    <string name="profile">My Profile</string>
     <string name="categories">Categories</string>
     <string name="messages">Messages</string>
     <string name="search_hint">Search Ads, User or Category</string>
@@ -115,13 +115,14 @@
     <string name="forgot_password_title">Forgot Password</string>
     <string name="enter_code">Enter Code</string>
     <string name="enter_code_error">Code Cannot be Empty</string>
+    <string name="enter_valid_code_error">Enter Valid Code</string>
     <string name="full_name">Full Name</string>
     <string name="zipcode">Zip Code</string>
     <string name="sign_up">Sign Up</string>
     <string name="facebook_signup">Register With Facebook</string>
     <string name="enter_name">Enter your Full Name</string>
     <string name="enter_city">Enter City</string>
-    <string name="enter_zipcode">Enter Zipcode</string>
+    <string name="enter_zipcode">Enter Valid Zipcode</string>
     <string name="select_language">Select Language</string>
     <string name="register">Register</string>
     <string name="verification_code_error">Enter Verification Code</string>
@@ -129,20 +130,20 @@
     <string name="select_menu">Select Menu</string>
     <string name="subscribe">Subscribe</string>
     <string name="twenty_seven">24/7 Service</string>
-    <string name="platinium_package">Platinium Package</string>
+    <string name="platinium_package">Platinum Package</string>
     <string name="gold_package">Gold Package</string>
     <string name="silver_package">Silver Package</string>
-    <string name="verification_message">A Verification code has been send to \n your mobile number</string>
+    <string name="verification_message">A Verification code has been sent to \n your mobile number</string>
     <string name="enter_verfication_code">Enter Verificaiton Code</string>
     <string name="city">City</string>
     <string name="continue_text">Continue</string>
     <string name="facilities">Facilities</string>
     <string name="subscription_price">Subscription Price</string>
-    <string name="customer_name">Customer Name:</string>
-    <string name="subscriber_id">Subscriber ID:</string>
-    <string name="address">Address:</string>
-    <string name="phone_number">Phone Number:</string>
-    <string name="customer_email">Email:</string>
+    <string name="customer_name">Customer Name :</string>
+    <string name="subscriber_id">Subscription ID :</string>
+    <string name="address">Address :</string>
+    <string name="phone_number">Phone Number :</string>
+    <string name="customer_email">Email :</string>
     <string name="procedd_payment">Proceed Payment</string>
     <string name="home">Home</string>
     <string name="settings">Settings</string>
@@ -150,7 +151,7 @@
     <string name="my_subscription">My Subscription</string>
     <string name="my_services">My Services</string>
     <string name="logout">Logout</string>
-    <string name="description">Description:</string>
+    <string name="description">Description :</string>
     <string name="request_service">Request Service</string>
     <string name="selected_jobs">Selected Jobs</string>
     <string name="additional_job">Additional Job</string>
@@ -158,34 +159,36 @@
     <string name="address_request">Address</string>
     <string name="preferred_date_time">Preferred Date/Time</string>
     <string name="job_title">Job Title</string>
-    <string name="addtional_job_description">Write your additional job\'s description here</string>
+    <string name="addtional_job_description">Write your additional job\'s description here…</string>
     <string name="location_dummy">Enter Your Location Here</string>
     <string name="select_date">Select Date</string>
     <string name="preferred_time">Select Time</string>
     <string name="select_time">Select Time</string>
     <string name="payment_option_value">Payment will made in cash upon service delivery</string>
     <string name="term_option_value">I accept all Terms and Privacy Policy</string>
-    <string name="book_service">Book Service</string>
+    <string name="terms">Terms </string>
+    <string name="privacy">Privacy Policy</string>
+    <string name="book_service">Book Request</string>
     <string name="date_before_error">Selected Date is Before Current Date</string>
     <string name="less_time_error">Please Select Arrive time after Current Time</string>
     <string name="select_date_error">Select Date First</string>
     <string name="pending">Pending</string>
     <string name="complete">Completed Jobs</string>
-    <string name="subscription_package">Subscription Package:</string>
-    <string name="next_visit">Next Visit Due:</string>
+    <string name="subscription_package">Subscription Package :</string>
+    <string name="next_visit">Next Visit Due  :</string>
     <string name="view_report">View Report</string>
     <string name="rate">Rate</string>
     <string name="rate_technicain">Rate Technician</string>
     <string name="write_feedback_here">Write your feedback</string>
     <string name="confirm">Confirm</string>
-    <string name="rating">Rating:</string>
-    <string name="technician_number">Technician Number: </string>
-    <string name="technician_name">Technician Name</string>
-    <string name="tesk_summary">Task Summery:</string>
-    <string name="time_duration">Time Duration:</string>
-    <string name="visit_made">Visit Made:</string>
-    <string name="date">Date:</string>
-    <string name="service_id">Service ID:</string>
+    <string name="rating">Rating :</string>
+    <string name="technician_number">Technician Number : </string>
+    <string name="technician_name">Technician Name :</string>
+    <string name="tesk_summary">Task Summary  :</string>
+    <string name="time_duration">Time Duration  :</string>
+    <string name="visit_made">Visit Made  :</string>
+    <string name="date">Date :</string>
+    <string name="service_id">Service ID :</string>
     <string name="update">Update</string>
     <string name="user_name">User Name</string>
     <string name="contact_number">Contact number</string>
@@ -207,5 +210,31 @@
     <string name="new_number">New Number</string>
     <string name="view_details">View Details</string>
     <string name="call_technician">Call Technician</string>
+    <string name="job_title_head">Job Title :</string>
+    <string name="jobs">Jobs :</string>
+    <string name="additional_note">Additional Note :</string>
+    <string name="cancel_Job">Cancel Job</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="cancel_message">Are you sure you want to cancel this Job?</string>
+    <string name="offer_packages">Offers and Packages</string>
+    <string name="subscriptions">Subscription</string>
+    <string name="thankyou">Thank You</string>
+    <string name="empty"/>
+    <string name="ok">Ok</string>
+    <string name="package_detail">Package Details</string>
+    <string name="request_for_service">Request for Service</string>
+    <string name="request_send">Request Sent</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="service_status">Service Status</string>
+    <string name="rate_review">Rate and Review</string>
+    <string name="service_details">Service Details</string>
+    <string name="app_settings">App Settings</string>
+    <string name="change_number">Change Number</string>
+    <string name="contact_form">Contact Form</string>
+    <string name="permission_error">Permission is required to access this feature</string>
+    <string name="logout_message">Are you sure you want to logout?</string>
+    <string name="subscription_status">Subscription Status</string>
+    <string name="enter_valid_city">Enter Valid City Name</string>
 
 </resources>
